app/src/main/java/com/example/mobileskillupsession/lsp/duck/good/Duck.kt
package com.example.mobileskillupsession.lsp.duck.good

interface Duck: DuckDuck {
    fun swim()
}